	PR breakpoint/12803 	* linespec.c (keep_name_info): Add handling for "volatile" keyword. 	(decode_compound): Unconditionally call	keep_name_info.